adding in the html and css files

--- a/style.css
+++ b/style.css
@@ -135,18 +135,22 @@ main {
 }
 
 .taxi-info {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     gap: 10px;
+    width: 100%;
+    align-items: center;
 }
 
 .info-group {
     background-color: #fff;
     padding: 10px;
     border-radius: 5px;
+    text-align: center;
 }
 
 .view-deal {
+    grid-column: span 5;
     padding: 10px 20px;
     background-color: #359381;
     color: white;
@@ -154,4 +158,5 @@ main {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1em;
+    justify-self: center;
 }
