FINISHING DELTE & CREATE

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,9 @@ main{
     height: 70vh;
     width:auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .navigation a{
