--- a/styles/style.css
+++ b/styles/style.css
@@ -15,23 +15,86 @@ body{
     flex-direction: column;
     
 }
-
-header{
-
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     padding: 30px 100px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    z-index: 0;
+    z-index: 100;
 }
-/* pointer-events: none; element will not respond to mouse events such as clicking or hovering*/
-.logo{
+
+.logo {
     font-size: 2em;
     color: #359381;
     pointer-events: none;
     margin-right: 270px;
 }
+
+.navigation a {
+    text-decoration: none;
+    color: #359381;
+    padding: 6px 15px;
+    border-radius: 20px;
+    margin: 0px 10px;
+    font-weight: 600;
+}
+
+.navigation a:hover, .navigation a.active {
+    background: #359381;
+    color: #fff;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    header {
+        padding: 20px 50px;
+    }
+    .logo {
+        margin-right: 150px;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 15px 20px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .logo {
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+    .navigation {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+    .navigation a {
+        margin: 5px 0;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        padding: 10px 10px;
+    }
+    .logo {
+        font-size: 1.5em;
+    }
+    .navigation {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navigation a {
+        padding: 5px 10px;
+        margin: 5px 0;
+    }
+}
+
 main{
     height: 70vh;
     width:auto;
@@ -40,22 +103,6 @@ main{
     justify-content: flex-start;
     align-items: center;
 }
-
-.navigation a{
-    text-decoration: none;
-    color: #359381;
-    padding: 6px 15px;
-    border-radius: 20px;
-    margin: 0px 10px;
-    font-weight: 600;
-    
-}
-
-.navigation a:hover,.navigation a.active{
-    background: #359381;
-    color: #fff
-}
-
 .parallax{
     position: relative;
     display: flex;
